k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webflux-kafka-backend
  namespace: webflux-kafka-poc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webflux-kafka-backend
  template:
    metadata:
      labels:
        app: webflux-kafka-backend
    spec:
      containers:
        - name: webflux-kafka-backend
          image: 123456789012.dkr.ecr.af-south-1.amazonaws.com/webflux-kafka-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /agent/swagger-ui.html
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /agent/swagger-ui.html
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
