k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webflux-kafka-backend
  namespace: webflux-kafka-poc
spec:
  type: ClusterIP
  selector:
    app: webflux-kafka-backend
  ports:
    - name: http
      port: 8082
      targetPort: 8082
